@@ -68,3 +68,4 @@ VDR Plugin 'satip' Revision History
 2014-xx-xx: Version 0.3.4
 
 - Fixed the cable only device detection.
+- Added support for blacklisted sources.
